--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "flatpickr": "^4.6.13",
     "next": "16.1.1",
     "next-drupal": "^2.0.0",
+    "nprogress": "^0.2.0",
     "react": "^19.2.0",
     "react-apexcharts": "^1.8.0",
     "react-dnd": "^16.0.1",
@@ -39,6 +40,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.19.25",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
     "@types/react-transition-group": "^4.4.12",
