--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ NEXT_PUBLIC_DRUPAL_BASE_URL=https://drupal-nextjs.ddev.site/
 NEXT_IMAGE_DOMAIN=drupal-nextjs.ddev.site
 
 # Authentication
-DRUPAL_CLIENT_ID=
-DRUPAL_CLIENT_SECRET=
+DRUPAL_CLIENT_ID=NTYmTfemdShtxDxSpYgVj5oSH9GwrL5Xuf_ZQVGjDdA
+DRUPAL_CLIENT_SECRET=SmM8W8UhrtNmsmP0PUAKuvI9cUn2seDO
 
 # Required for On-demand Revalidation
 DRUPAL_REVALIDATE_SECRET=
