--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ DRUPAL_CLIENT_SECRET=Retrieve this from /admin/config/services/consumer
 
 # Required for On-demand Revalidation
 DRUPAL_REVALIDATE_SECRET=Retrieve this from /admin/config/services/next
+
+NEXT_PUBLIC_DRUPAL_ACCEPT_SELF_SIGNED=
+NODE_TLS_REJECT_UNAUTHORIZED=
