--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "apexcharts": "^4.7.0",
     "autoprefixer": "^10.4.22",
+    "drupal-jsonapi-params": "^3.0.0",
     "flatpickr": "^4.6.13",
     "next": "16.1.1",
     "next-drupal": "^2.0.0",
